# kanban-mdx

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.kbmdx/: .embeddings.db  activity.jsonl  config.toml  find_history  jump_history  search_history  undo.jsonl
.kbmdx/tasks/: 001-design-sembed-provider-agnostic-semantic.md  002-implement-sembed-library-and-add-as-submodule.md  003-integrate-sembed-into-kanban-md-config-and-search.md  004-worktree-transparent-board-access.md  005-branch-board-switching-worktree-derived-board.md  006-implement-branch-board-switching-context.md  007-add-context-picker-modal-to-tui.md  008-show-add-prompt-and-fields-flags-for-llm-optimized.md  009-show-add-children-flag-for-parent-children-summary.md  010-move-add-next-prev-and-claim-flags.md  012-edit-add-set-section-and-section-body-flags.md  017-batch-operations-for-edit-delete-and-archive.md  021-config-set-implement-full-config-set-command.md  022-context-add-write-to-sections-days-flags.md  027-undo-redo-full-implementation-with-file-snapshots.md  029-pick-auto-populate-branch-worktree-from-git.md  031-task-consistency-checks-on-load-duplicate-ids.md  032-config-migration-system-automatic-schema-version.md  034-tui-navigation-improvements-go-to-task-page-up.md  035-tui-semantic-search-integration-f-key.md  036-tui-column-features-collapse-expand-tab-wip.md  038-tui-live-refresh-on-file-changes-file-watcher.md  039-tui-task-card-display-features-age-thresholds-due.md  043-branch-requirement-enforcement-3-level-warn.md  047-tui-advanced-search-syntax-age-priority-id-filters.md  049-tui-find-in-detail-match-navigation-n-n-next-prev.md  051-tui-help-screen-scrolling-search-and-filtering.md  054-tui-mouse-horizontal-scrolling-for-column.md  (+28 more)
kanban/: .embeddings.json  activity.jsonl  config.toml  find_history  jump_history  search_history
sembed-rs/: Cargo.toml  README.md
sembed-rs/src/: embedder.rs  hash.rs  index.rs  lib.rs  mock.rs  ollama.rs  openai.rs  vector.rs
src/: error.rs  lib.rs  main.rs
src/io/: mod.rs  (+2 more)
tui-md/: Cargo.toml
tui-md/src/: highlight.rs  lib.rs  options.rs  style_sheet.rs
(+164 files in other folders)
