[package]
name = "tui-md"
version = "0.1.0"
edition = "2021"
description = "Markdown-to-ratatui renderer with GFM tables, heading folding, and syntax highlighting"
license = "MIT"

[lib]
name = "tui_md"
path = "src/lib.rs"

[dependencies]
# Markdown parsing
pulldown-cmark = { version = "0.13", default-features = false }
itertools = "0.14"

# TUI rendering
ratatui = "0.30"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = [
  "default-fancy",
] }

[dev-dependencies]
